<resources>
    <string name="app_name">Wallpapy</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="latest">Latest</string>
    <string name="popular">Popular</string>
    <string name="oldest">Oldest</string>
    <string name="category">Category</string>
    <string name="server_error">Server error, try again later</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="no_internet">Oops, your connection seems off…</string>
    <string name="single">Photo</string>
    <string name="non_single">Photos</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the author in the experience.\n"
        "An emphasis on author actions makes core functionality immediately apparent and provides "
        "waypoints for the author.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the author as the prime mover. Primary author actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the author without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to author input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "author picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a author tries to pick up one of cards.\n\n"
    </string>
    <string name="to_refresh">Keep calm, check your connection\n and pull to refresh to try again</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="search">Search</string>
    <string name="search_hint">Search here</string>
    <string name="sort_by">Sort By</string>

    <string name="fab_stats">Statistic</string>
    <string name="fab_info">Info</string>
    <string name="fab_set_wall">Set as wallpaper</string>
    <string name="fab_download">Download</string>
    <string name="unknown">Unknown</string>
    <string name="single_like">like</string>
    <string name="non_single_like">likes</string>
    <string name="non_single_download">downloads</string>
    <string name="single_download">download</string>
    <string name="by">By </string>
    <string name="dimensions">Dimensions: </string>
    <string name="make">Make: </string>
    <string name="model">Model: </string>
    <string name="exposure_time">Exposure time: </string>
    <string name="aperture">Aperture: </string>
    <string name="iso">ISO: </string>
    <string name="focal_length">Focal length: </string>
    <string name="single_view">View</string>
    <string name="non_single_view">Views</string>
    <string name="photos">photos</string>
    <string name="collections">collections</string>
    <string name="likes">likes</string>
    <string name="users">users</string>
    <string name="search_something">You can search anything\n included photos, users and collections</string>
    <string name="share">Share</string>
    <string name="newf">New</string>
    <string name="featuredf">Featured</string>
    <string name="permission_message">Wallpapy requires permission to be able to activate several features.
        To enable permissions go to Settings > Permissions > Allow</string>
    <string name="open_settings">Open settings</string>
    <string name="collectionsf">Collections</string>
    <string name="curated">Curated</string>
    <string name="all">All</string>
    <string name="not_found">No items found</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="collection_empty">Collections is empty</string>
    <string name="photos_empty">Photos is empty</string>
    <string name="likes_empty">Likes is empty</string>
    <string name="on_unsplash">on Unsplash</string>
    <string name="browse">Browse</string>

    <string name="title_one">Welcome to Wallpapy</string>
    <string name="title_two">Find various photos</string>
    <string name="title_three">Downloadable photos</string>
    <string name="title_four">Share and set</string>

    <string name="desc_one">With Wallpapy you can find out amazing image and photos</string>
    <string name="desc_two">More than 1,000,000 free high-resolution photos from more than 140,000 photographers around the world</string>
    <string name="desc_three">With curated and popular photos sort you can download any photos you want</string>
    <string name="desc_four">Share with your friends and don\'t forget that you can set it as wallpaper!</string>
</resources>
