<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_new_featured"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_new_featured"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_latest"
                android:title="@string/latest"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_oldest"
                android:title="@string/oldest"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_popular"
                android:title="@string/popular"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>