<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_collections"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_collections"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/sort_by"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/action_sort_collections_all"
                android:title="@string/all"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_collections_curated"
                android:title="@string/curated"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_collections_featured"
                android:title="@string/featuredf"
                app:showAsAction="never" />
        </menu>

    </item>

</menu>