<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="@dimen/text_margin"
    android:paddingTop="@dimen/text_margin"
    android:paddingEnd="@dimen/bb_default_elevation"
    android:paddingBottom="@dimen/text_margin">

    <TextView
        android:id="@+id/dialog_info_tv_dimens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_ratio_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/dimensions"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_info_tv_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_image_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/make"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_info_tv_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_camera_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/model"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_info_tv_exposure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_exposure_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/exposure_time"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_info_tv_aperture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_aperture_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/aperture"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_info_tv_iso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_iso_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/iso"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_info_tv_focallength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_focal_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:text="@string/focal_length"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/dialog_info_tv_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_margin"
        android:drawableStart="@drawable/ic_eye_24"
        android:drawablePadding="@dimen/text_margin"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearanceMediumSmall"
        android:textColor="@android:color/black"
        tools:text="@string/non_single_view" />

</LinearLayout>