<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_tab_photos"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_tab_photos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false" />

            <LinearLayout
                android:id="@+id/linear_internet_tab_photos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_connection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/no_internet"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to_refresh"
                    android:textAppearance="?android:textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_search_tab_photos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/search_something"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/black50" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_empty_tab_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/collection_empty"
                android:alpha="0.7"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:visibility="gone"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_tab_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleX="0.75"
                android:scaleY="0.75" />

        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>