<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_fragment_new_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:theme="@style/ToolbarTheme"
        app:title="@string/newf"
        app:titleTextColor="@android:color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_backup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nestedscrollview_backup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.daimajia.slider.library.SliderLayout
                            android:id="@+id/slider_latest_backup"
                            android:layout_width="match_parent"
                            android:layout_height="220dp" />

                        <com.daimajia.slider.library.Indicators.PagerIndicator
                            android:id="@+id/slider_latest_indicator_backup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ProgressBar
                            android:id="@+id/progress_slider_backup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:scaleX="0.75"
                            android:scaleY="0.75" />

                    </FrameLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_latest_backup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        tools:itemCount="29" />

                </LinearLayout>

            </android.support.v4.widget.NestedScrollView>

        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/linear_internet_latest_backup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_connection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/no_internet"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_refresh"
                android:textAppearance="?android:textAppearanceSmall" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_new_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleX="0.75"
            android:scaleY="0.75" />

    </FrameLayout>

</LinearLayout>